--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,28 +1,32 @@
 
-<div class="album py-5 bg-light">
-  <div class="container">
-    <div class="row">
-    <% @posts.each do |post| %>
-      <div class="col-md-4">
-        <div class="card md-4 shadow-sm">
-          <%= image_tag post.image, class:"card-img-top" if post.image.attached? %>
-          
-          <div class="card-body">
-          <h5 class="card-title"><%= post.title %>
-          </h5>
-            <p class="card-text"><%= post.body %></p>
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="btn-group">
-              <button type="button" class="btn btn-sm btn-outline-secondary">詳細</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary">
-              <%= post.user.name %></button>
-            </div>
-            <small class="text-muted"><%= post.updated_at %>
-            </small>
-          </div>
-        </div>
-      </div>
-    <% end %>
+
+  <div class="row row-cols md-3">
+  <% @posts.each do |post| %>
+  <div class="card　d-flex justify-content-around m-auto" style="width: 25rem;" >
+  <div class="card-body">
+  
+  
+    <%= image_tag post.image, :width => '280', :height => '280'if post.image.attached? %> 
+    
+    
+      <h5 class="card-title"><%= post.title %></h5>
+      <p class="card-text"><%= post.body %></p>
+    
+
+    <div class="btn-group">
+          <button type="button" class="btn btn-sm btn-outline-secondary">
+            <%= link_to '詳細', post_path(post.id) , method: :get %></button>
+          <button type="button" class="btn btn-sm btn-outline-secondary">
+            <%= post.user.name %></button>
     </div>
+    
+      <p class="card-text">
+      <small class="text-muted"><%= post.updated_at %>
+      </small>
+      </p>
+
   </div>
-</div>
+  </div>
+  <% end %>
+  </div>
+
