--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,15 +2,17 @@
 
   <div class="row row-cols md-3">
   <% @posts.each do |post| %>
-  <div class="card　d-flex justify-content-around m-auto" style="width: 25rem;" >
+  <div class="card　d-flex justify-content-around m-5" style="width: 30rem; heigth: 100rem;">
   <div class="card-body">
   
   
     <%= image_tag post.image, :width => '280', :height => '280'if post.image.attached? %> 
     
     
-      <h5 class="card-title"><%= post.title %></h5>
-      <p class="card-text"><%= post.body %></p>
+      <h4 class="card-title"><%= post.title %></h4>
+      １位<p class="card-text"><%= post.rank1 %></p>
+      ２位<p class="card-text"><%= post.rank2 %></p>
+      ３位<p class="card-text"><%= post.rank3 %></p>
     
 
     <div class="btn-group">
