--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,15 +2,12 @@
 
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Fluid jumbotron</h1>
-    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+    <h1 class="display-4"><%= @user.name %></h1>
+    <p class="lead"><%= @user.profile %></p>
   </div>
 </div>
 
 <div class="row row-cols md-3">
 
-<% @posts.each do |post| %>
-  <%= render partial: "posts/post", locals: { post: post } %>
-<% end %>
+<%= render partial: 'posts/post', collection: @user.posts.order("created_at DESC") %>
 
-<div>
