ヘッダーをトップ画面以外で非表示に

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -13,10 +13,10 @@
     </div>
 
     <div class="form-group">
-      <label for="exampleFormControlFile1">Example file input</label>
+      <label for="exampleFormControlFile1">画像は１枚まで投稿できます</label>
       <%= form.file_field :image, class:"form-control-file"%>
     </div>
 
     <%= form.submit "投稿する" ,class:"sell-btn" %>
 
-    <% end %>
+<% end %>
