--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,7 @@
 
-
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4"><%= @user.name %></h1>
+    <h1 class="display-4"><%= @user.name %>さんのページです</h1>
     <p class="lead"><%= @user.profile %></p>
   </div>
 </div>
