--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="contents row">
   <div class="container">
-    <h3>編集する</h3>
+    <h3>投稿を編集</h3>
     
     <%= render partial: "form", locals: { post: @post } %>
   </div>
