--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
 
   <div class="row row-cols md-3">
   <% @posts.each do |post| %>
-  <div class="card　d-flex justify-content-around m-5" style="width: 30rem; heigth: 100rem;">
+  <div class="card　d-flex justify-content-around m-5" style="width: auto; heigth: auto;">
   <div class="card-body border border-primary">
   
   
@@ -21,6 +21,9 @@
           <button type="button" class="btn btn-5m btn-outline-secondary">
             <%=link_to post.user.name, user_path(post.user.id)%></button>
     </div>
+          <i class="far fa-star"></i>
+
+
     
       <p class="card-text">
       <small class="text-muted"><%= post.updated_at %>
