--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -22,15 +22,15 @@
             <%=link_to post.user.name, user_path(post.user.id)%></button>
     </div>
 
-    <div id="likes_buttons_<%= post.likes_count %>">
-        <%= render partial:'likes/like', locals: { post: post} %>
+    <div id="like_button_<%= post.likes_count %>">
+        いいね<%= render partial:'likes/like', locals: { post: post, like: @likes } %>
     </div>
 
 
     
       <p class="card-text">
-      <small class="text-muted"><%= post.updated_at %>
-      </small>
+        <small class="text-muted"><%= post.updated_at %>
+        </small>
       </p>
 
   </div>
