--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,22 +1,13 @@
 <% if user_signed_in? %>
-        <% if post.like_user(current_user.id) %>
-          <%= button_to post_like_path(like, post_id: post.id), method: :delete, id: "like-button-#{post.id}", remote: true do %>
-          <i class="fas fa-star"></i>
-            <span>
-              <%= post.likes_count %>
-            </span>
-           <% end %>
-        <% else %>
-        <%= button_to post_likes_path(post), id: "like-button-#{post.id}", remote: true do %>
-        <i class="far fa-star"></i>
-          <span>
-            <%= post.likes_count %>
-          </span>
-          <% end %>
-        <% end %>
-        <% else %>
-          <i class="far fa-star"></i>
-          <span>
-            <%= post.likes_count %>
-          </span>
+    <% if post.like_user(current_user.id) %>
+        <p><span>お気に入り解除: </span><%=link_to post.likes.count, post_likes_path(post.id), method: :delete, remote: true %>
+        <i class="fas fa-star"></i></p>
+    <% else %>
+        <p><span>お気に入り登録: </span><%=link_to post.likes.count, post_likes_path(post.id), method: :post, remote: true %>
+        <i class="far fa-star"></i></p>
+    <% end %>
+<% else %>
+<i class="far fa-star"></i>
+    <p><span>お気に入り数: </span><%= post.likes.count %></p>
 <% end %>
+
