--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -22,9 +22,11 @@
             <%=link_to post.user.name, user_path(post.user.id)%></button>
     </div>
 
-    <div id="like_button_<%= post.likes_count %>">
-        いいね<%= render partial:'likes/like', locals: { post: post, like: @likes } %>
+
+    <div id="likes_buttons_<%= post.id %>">
+      <%= render partial: 'likes/like', locals: { post: post} %>
     </div>
+
 
 
     
