--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<div class="card　d-flex justify-content-around m-5" style="width: 30rem; heigth: 100rem;">
+<div class="card d-flex justify-content-around m-5" style="width: 30rem; heigth: 100rem;">
   <div class="card-body">
   
   
@@ -22,6 +22,11 @@
         <small class="text-muted"><%= post.updated_at %>
         </small>
       </p>
+
+      <div id="likes_buttons_<%= post.id %>">
+      <%= render partial: 'likes/like', locals: { post: post} %>
+    </div>
+  
 
       
   </div>
