--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,7 @@
-
+<%= form_with url: search_posts_path, method: :get, local: true do |form| %>
+  <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
+  <%= form.submit "検索", class: "search-btn" %>
+<% end %>
 
 <div class="row row-cols md-3">
 <% @posts.each do |post| %>
