--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -29,6 +29,13 @@
           <%= f.text_area :profile, class: "form-control", placeholder:"プロフィールを入力してください" %>
         </div>
 
+    <div class="form-group">
+      <label for="exampleFormControlFile1">画像は１枚まで投稿できます</label>
+      <%= f.file_field :profile_image, class:"form-control-file"%>
+    </div>
+
+       
+
      
 
       <div class="text-center">
