--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -17,6 +17,21 @@
       <button type="button" class="btn btn-sm btn-outline-secondary">
         <%=link_to post.user.name, user_path(post.user.id)%></button>
     </div>
+
+    <%= form_for @post do |f| %>
+    <div class='form-group'>
+        <%= f.collection_check_boxes(:tag_ids, Tag.all, :id, :tag_name) do |tag| %>
+            <div class='form-check'>
+                <%= tag.label class: 'form-check-label' do %>
+                    <%= tag.check_box class: 'form-check-input' %>
+                    <%= tag.text %>
+                <% end %>
+            </div>
+        <% end %>
+    </div>
+
+    <%= f.submit '保存', class: 'btn btn-primary' %>
+<% end %>
     
       <p class="card-text">
         <small class="text-muted"><%= post.updated_at %>
