--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,5 @@
-<div class="card d-flex justify-content-around m-5" style="width: 30rem; heigth: 100rem;">
+<div class="row row-cols md-3">
+<div class="card d-flex justify-content-around m-5" style="width: auto; heigth: auto;">
   <div class="card-body">
   
     <%= image_tag post.image, :width => '280', :height => '280'if post.image.attached? %> 
@@ -31,5 +32,6 @@
 
       
   </div>
+</div>
 </div>
 
