--- a/app/views/users/follower_list.html.erb
+++ b/app/views/users/follower_list.html.erb
@@ -1,10 +1,27 @@
 <% @user.followers.each do |user| %>
-  <%= user.name %>
-  <%= link_to '詳細', user_path(user) %>
+
+<div class= "card d-flex justify-content-around m-5" style="width: auto; heigth: auto;">
+<div class="row row-cols md-3">
+  <h4 class="ml-5">
+    <%= user.name %>
+  </h4>
+
   <p>
+    <img src=<%= user.image %>  class = "icon_image">
+  </p>
+
+  <p class="ml-2">
+  <%= link_to '詳細', user_path(user) %>
+  </p>
+
+  <p class="ml-2">
   <%= user.profile %>
   </p>
 
-  <%= render partial: 'posts/post', collection: @user.posts.order("created_at DESC").limit(2) %>
+  <%= render partial: 'posts/post', collection: @user.posts.order("created_at DESC").limit(3) %>
+</div>
+</div>
 
 <% end %>
+
+
