--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,29 +1,32 @@
 <div class="row row-cols md-3">
 <div class="card d-flex justify-content-around m-5" style="width: auto; heigth: auto;">
   <div class="card-body">
+
   
-    <%= image_tag post.image, :width => '280', :height => '280'if post.image.attached? %> 
-    
+  <img src=<%= post.user.image  %> class = "icon_image">
+  
       <h4 class="card-title"><%= post.title %></h4>
       １位<p class="card-text"><%= post.rank1 %></p>
       ２位<p class="card-text"><%= post.rank2 %></p>
       ３位<p class="card-text"><%= post.rank3 %></p>
+
+  <%= image_tag post.image, :width => '280', :height => '280'if post.image.attached? %> 
     
-    <div class="btn-group">
+      <p class="card-text">
+        <small class="text-muted"><%= post.updated_at %>
+        </small>
+      </p>
+
+      <% post.tags.each do |tag| %>
+    <span class= 'badge badge-primary'><%= tag.tag_name %></span>
+    <% end %>
+
+      <div class="btn-group">
       <button type="button" class="btn btn-sm btn-outline-secondary">
         <%= link_to '詳細', post_path(post.id) , method: :get %></button>
       <button type="button" class="btn btn-sm btn-outline-secondary">
         <%=link_to post.user.name, user_path(post.user.id)%></button>
     </div>
-
-    <% post.tags.each do |tag| %>
-    <span class= 'badge badge-primary'><%= tag.tag_name %></span>
-    <% end %>
-
-      <p class="card-text">
-        <small class="text-muted"><%= post.updated_at %>
-        </small>
-      </p>
 
       <div id="likes_buttons_<%= post.id %>">
       <%= render partial: 'likes/like', locals: { post: post} %>
