--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,3 @@
-
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
 
@@ -24,6 +23,7 @@
     <%= link_to "フォロー", {controller: :users,action: :follow_list,user_id: @user.id}, method: :get %>
     <%= @user.followers_count %>
     <%= link_to "フォロワー", {controller: :users,action: :follower_list,user_id: @user.id}, method: :get %>
+    
 
   </div>
 </div>
@@ -33,11 +33,72 @@
 </button>
 
 
-
+<h3 class="mt-3">投稿一覧</h3>
 
 <div class="row row-cols md-3">
 
-<%= render partial: 'posts/post', collection: @user.posts.order("created_at DESC") %>
+  <%= render partial: 'posts/post', collection: @user.posts.order("created_at DESC") %>
+
+</div>
+
+<h3 class="mt-3">いいね一覧</h3>
+
+<div class="row row-cols md-3">
+
+<% @likes.each do |like| %>
+    <% post = Post.find_by(id: like.post_id) %>
+    <% user = User.find_by(id: post.user_id) %>
+
+    <div class="card d-flex justify-content-around m-5" style="width: auto; heigth: auto;">
+  <div class="card-body border border-primary">
+  
+  <img src=<%= post.user.image %>  class = "icon_image">
+    
+    
+      <h4 class="card-title"><%= post.title %></h4>
+      １位<p class="card-text"><%= post.rank1 %></p>
+      ２位<p class="card-text"><%= post.rank2 %></p>
+      ３位<p class="card-text"><%= post.rank3 %></p>
+
+      <%= image_tag post.image, :width => '280', :height => '280'  if post.image.attached? %>
+
+             
+    
+<p>
+    <div class="btn-group">
+          <button type="button" class="btn btn-5m btn-outline-secondary">
+            <%= link_to '詳細', post_path(post.id) , method: :get %></button>
+          <button type="button" class="btn btn-5m btn-outline-secondary">
+            <%=link_to post.user.name, user_path(post.user.id)%></button>
+    </div>
+</p>
+
+<p>
+    <div id="likes_buttons_<%= post.id %>">
+      <%= render partial: 'likes/like', locals: { post: post} %>
+    </div>
+</p>
+
+
+    
+      <p class="card-text">
+        <small class="text-muted"><%= post.updated_at %>
+        </small>
+      </p>
+
+       <% post.tags.each do |tag| %>
+        <span class= 'badge badge-primary'>
+        <%= tag.tag_name %>
+        </span>
+      <% end %>
+
+
+  </div>
+  </div>
+<% end %>
+
+</div>
+
 
 
 
