--- a/app/views/users/follow_list.html.erb
+++ b/app/views/users/follow_list.html.erb
@@ -6,7 +6,7 @@
   </h4>
 
   <p>
-    <img src=<%= user.image %>  class = "icon_image">
+    <%= image_tag user.image.to_s , class:"icon_image"%>
   </p>
 
   <p class="ml-2">
