ユーザーアイコンの表示、検索画面の修正、いいね機能の修正、

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,7 @@
 <div class="card mb-3">
   <div class="card-body">
+
+  <%= image_tag @post.user.image.to_s , class:"icon_image"%>
   
     <h5 class="card-title"><%= @post.title %></h5>
     1位<p class="card-text"><%= @post.rank1 %></p>
