--- a/app/views/partial/_header.html.erb
+++ b/app/views/partial/_header.html.erb
@@ -12,13 +12,13 @@
     <ul class="nav justify-content-end">
       
       <li class="nav-item">
-        <h3><%= link_to "投稿する",new_post_path,class:"nav-link",method: :get %>
+        <h3><%= link_to "投稿する",new_post_path,class:"nav-link btn btn-outline-primary mr-2",method: :get %>
       </li></h3>
       <li class="nav-item">
-      <h3><%= link_to "ログアウト", destroy_user_session_path,class:"nav-link", method: :delete %>
+      <h3><%= link_to "ログアウト", destroy_user_session_path,class:"nav-link btn btn-outline-primary mr-2", method: :delete %>
       </li></h3>
       <li class="nav-item">
-        <h3><%= link_to current_user.name, user_path(current_user), class:"nav-link" %>
+        <h3><%= link_to current_user.name, user_path(current_user), class:"nav-link btn btn-outline-primary mr-5" %>
       </li></h3>
     </ul>
 
