--- a/app/views/posts/_search.html.erb
+++ b/app/views/posts/_search.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag posts_path, method: :get, class: 'boards__searchForm' do %>
+<%= form_tag posts_path, method: :get, class: 'ml-3 boards__searchForm' do %>
       <%= select_tag :tag_id,
                      options_from_collection_for_select(Tag.all, :id, :tag_name, params[:tag_id]),
                      {
