--- a/app/views/users/follow_list.html.erb
+++ b/app/views/users/follow_list.html.erb
@@ -2,22 +2,15 @@
 <div class= "card d-flex justify-content-around m-5" style="width: auto; heigth: auto;">
 <div class="row row-cols md-3">
   <h4 class="ml-5">
-    <%= user.name %>
+    <%= link_to user.name, user_path(user) %>
   </h4>
 
   <p>
     <%= image_tag user.image.to_s , class:"icon_image"%>
   </p>
 
-  <p class="ml-2">
-  <%= link_to '詳細', user_path(user) %>
-  </p>
 
-  <p class="ml-2">
-  <%= user.profile %>
-  </p>
-
-  <%= render partial: 'posts/post', collection: @user.posts.order("created_at DESC").limit(3) %>
+  <%= render partial: 'posts/post', collection: user.posts.order("created_at DESC").limit(3) %>
 </div>
 </div>
 
