ユーザー結合テストでアイコンを使えること、編集ができることを確認、投稿結合テストでタグ付きの投稿、編集ができることを確認

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -20,7 +20,7 @@
   </div>
   
   <div class="text-center">
-    <%= f.submit "アカウントを作成", class: "btn submitBtn" %>
+    <%= f.submit "プロフィールを更新", class: "btn submitBtn" %>
   </div>
 <% end %>
 
