--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -1,7 +1,7 @@
 <%= render 'posts/search' %>
 
 <%= form_with(url: search_posts_path, local: true, method: :get, class: "search-form") do |form| %>
-  <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
+  <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input ml-3" %>
   <%= form.submit "検索", class: "search-btn" %>
 <% end %>
 
