コメント結合テストにBasic認証通過　サポートモジュールでログインに関するコードをまとめる

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,7 +1,6 @@
 <div class="row row-cols md-3">
 <div class="card d-flex justify-content-around m-5" style="width: auto; heigth: auto;">
-  <div class="card-body">
-
+    <div class="card-body border border-primary">
   
   <%= image_tag post.user.image.to_s , class:"icon_image"%>
   
@@ -33,8 +32,7 @@
     </div>
   
 
-      
-  </div>
+    </div>  
 </div>
 </div>
 
