--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -49,6 +49,29 @@
 
 
 <br>
+
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+
+
+</div>
+
+
+
+    <h4>＜コメント一覧＞</h4>
+
+      <% if @comments %>
+              <% @comments.each do |comment| %>
+                <p>
+                  <strong><%= link_to comment.user.name, "/users/#{comment.user_id}" %>：</strong>
+                  <%= comment.text %>
+                </p>
+              <% end %>
+      <% end %>
+
+  </div>
+</div>
+
 <% if current_user %>
       <%= form_with(model: [@post, @comment], local: true) do |form| %>
         <%= form.text_area :text, placeholder: "コメントする", rows: "2" %>
@@ -58,22 +81,6 @@
 <% else %>
       <strong><p>※※※ コメントの投稿には新規登録/ログインが必要です ※※※</p></strong>
 <% end %>
-</div>
-
-
-
-<h4>＜コメント一覧＞</h4>
-
-<% if @comments %>
-        <% @comments.each do |comment| %>
-          <p>
-            <strong><%= link_to comment.user.name, "/users/#{comment.user_id}" %>：</strong>
-            <%= comment.text %>
-          </p>
-        <% end %>
-<% end %>
-
-
 
 
 
