--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,7 +37,7 @@
 
 <div class="row row-cols md-3">
 
-  <%= render partial: 'posts/post', collection: @user.posts.order("created_at DESC") %>
+      <%= render partial: 'posts/post', collection: @user.posts.order("created_at DESC") %>
 
 </div>
 
@@ -63,7 +63,7 @@
       ２位<p class="card-text"><%= post.rank2 %></p>
       ３位<p class="card-text"><%= post.rank3 %></p>
 
-      <%= image_tag post.image, :height => '280' if post.image.attached? %>
+      <%= image_tag post.image, :height => '280', :width => '280' if post.image.attached? %>
 
              
     
