--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -50,12 +50,12 @@
 
 <div class="row row-cols md-3">
 
-
-
     <div class="card d-flex justify-content-around m-5" style="width: auto; heigth: auto;">
   <div class="card-body border border-primary">
   
   <img src=<%= post.user.image %>  class = "icon_image">
+
+  <b><%=link_to post.user.name, user_path(post.user.id)%></b>
     
     
       <h4 class="card-title"><%= post.title %></h4>
