--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -16,14 +16,14 @@
 
   <div class="field">
     <%= f.label :image %><br/>
-    <%= f.file_field :image %>
+    <%= f.file_field :image, class: "icon_image" %>
   </div>
   
   <div class="text-center">
-    <%= f.submit "プロフィールを更新", class: "btn submitBtn" %>
+    <%= f.submit "プロフィールを更新", class: "btn btn-outline-secondary" %>
   </div>
 <% end %>
 
 
 
-<%= link_to "Back", :back %>
+<%= link_to "戻る", :back, class: "btn btn-outline-secondary" %>
